# json_tables

./: .kateconfig  Cargo.toml  README.md
src/: aux.rs  lib.rs  table_error.rs
tests/: tests.rs
tests/delete/: 0.json
tests/delete_2/: 1.json  2.json
tests/dotted/: this.file.has.dots.json
tests/extension/: 2.xml
tests/mixed/: 1.json
tests/normal/: 0.json  4.json
tests/normal_mut_2/: 1.json
tests/normal_mut_3/: 3.json
tests/simplified_1/: 3.json  4.json
